@@ -1,5 +1,11 @@
 2003-04-09  Bastien Nocera  <hadess@hadess.net>
 
+	* src/gtk-playlist.c:
+	* src/totem.c: (totem_action_set_mrl): fix the setting of the custom
+	name being rather random
+
+2003-04-09  Bastien Nocera  <hadess@hadess.net>
+
 	* README: upd
 	* data/playlist.glade:
 	* data/properties.glade:
